--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "remixicon": "^4.3.0",
     "sweetalert2": "^11.12.4",
+    "swiper": "^11.1.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-cookies": "^1.0.6",
