--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "mixitup": "^3.3.1",
     "register-service-worker": "^1.7.2",
     "remixicon": "^4.3.0",
+    "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.12",
     "vue": "^3.2.13",
@@ -30,6 +32,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.7.1",
+    "prettier": "^3.3.3"
   }
 }
